# LaminateSketch

./: CMakeLists.txt  CMakeUserPresets.json  README.md  common.cpp  common.h  dx_data.h  dx_handler.cpp  dx_handler.h  dx_iface.cpp  dx_iface.h  handler.cpp  handler.h  ls_data.h  ls_iface.cpp  ls_iface.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  sketch.cpp  sketch.h
examples/: example_1.dxf  example_2.dxf  example_3.dxf
examples/example_1/: example_1_in.dxf  example_1_out.dxf
icons/: app_icon.icns
